Finished index.html and added small style.css features

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <link rel="stylesheet" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Collin Giess - Github.io Tutorial</title>
+    </head>
+    <body>
+        <div class="about-me">
+            <h2>About Me</h2>
+            <p>
+                My name is Collin Giess and I am a first year Software Engineering major at RIT. I am from Victor, New York and I graduated from Victor Senior High School. In 
+                my free time I enjoy playing basketball, volleyball, and video games. I took 2 years of computer science in high school and really enjoyed it, which led me to choose
+                Software Engineering as my major. My favorite food (shown below) is a cheeseburger. You can find a link to the RIT Software Engineering website below at the bottom of the
+                page.
+            </p>
+            <img src="https://www.sbs.com.au/food/sites/sbs.com.au.food/files/lotus-burger-lead.jpg" alt="Cheeseburger" width=35%>
+        </div>
+        <div class="bullet-points">
+            <h2>Things I Would Like to Learn from this Course:</h2>
+            <ul>
+                <li>Team communication skills</li>
+                <li>Tools to use in the future</li>
+                <li>Software engineering techniques</li>
+            </ul>
+            <a href="https://www.rit.edu/computing/department-software-engineering" target="_blank">
+                <img src="https://ticket.se.rit.edu/NoAuth/Helpers/CustomLogo/97e6890424cb3ebfd6d45a4dd122f74f" alt="RIT Software Engineering">
+            </a>
+        </div>
+    </body>
+</html>
